# BevyRaceTiles

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml  cicd.yml  release.yml
assets/: .gitignore  background-tiles.xcf  road-tiles.xcf
assets/map/: level0.tmx
assets/map/tilesheets/: entities.tsx  lands.tsx  roads.tsx
src/: main.rs
src/camera/: mod.rs  ui.rs  ui_laps.rs
src/dev_tools/: mod.rs
src/entities/: car.rs  car_brakelights.rs  car_checkpoint.rs  car_wheels.rs  checkpoint.rs  mod.rs  road.rs
src/level/: mod.rs  physics.rs
src/player/: mod.rs
